--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -3,10 +3,11 @@ steps:
 - label: 'symlink test: after'
   agents: { jobsize: "hours" }
   commands:
-  - test -d /build/symlinktest_after && /bin/rm -rf /build/symlinktest_after
+  - d=/build/symlinktest_after
+  - test -d $$d && /bin/rm -rf $$d
   - 'mflowgen/test/test_module.sh full_chip tile_array Tile_PE
        --debug
-       --update_cache /build/symlinktest_after
+       --update_cache $$d
        --steps rtl,tsmc16'
   - cd /build/symlinktest_before; ls -lR | grep bigjobs
 
