--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -9,7 +9,7 @@ steps:
        --debug
        --update_cache $$d
        --steps rtl,tsmc16'
-  - cd /build/symlinktest_before; ls -lR | grep bigjobs
+  - cd $$d; ls -lR | grep bigjobs
 
 
 
