--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ coreir  # should be first so we get the latest version
 -e git://github.com/phanrahan/mantle.git#egg=mantle
 ordered_set
 cosa
--e git://github.com/leonardt/fault.git#egg=fault
+# -e git://github.com/leonardt/fault.git#egg=fault
+fault
 hwtypes
 archipelago
