test of build_dir option maybe

--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -1,33 +1,38 @@
 steps:
 
-##############################################################################
-# INDIVIDUAL TILE RUNS
+# ##############################################################################
+# # INDIVIDUAL TILE RUNS
+# # 
+# - label: 'MemCore synth 17m'
+#   agents: { jobsize: "hours" }
+#   commands:
+#   - test=mflowgen/test/test_module.sh
+#   - $$test full_chip tile_array Tile_MemCore --steps synthesis --debug
+# - wait: { continue_on_failure: true } # One step at a time + continue on failure
 # 
-- label: 'MemCore synth 17m'
-  agents: { jobsize: "hours" }
-  commands:
-  - test=mflowgen/test/test_module.sh
-  - $$test full_chip tile_array Tile_MemCore --steps synthesis --debug
-- wait: { continue_on_failure: true } # One step at a time + continue on failure
-
-- label: 'PE synth 23m'
-  agents: { jobsize: "hours" }
-  commands:
-  - test=mflowgen/test/test_module.sh
-  - $$test full_chip tile_array Tile_PE --steps synthesis --debug
-- wait: { continue_on_failure: true } # One step at a time + continue on failure
+# - label: 'PE synth 23m'
+#   agents: { jobsize: "hours" }
+#   commands:
+#   - test=mflowgen/test/test_module.sh
+#   - $$test full_chip tile_array Tile_PE --steps synthesis --debug
+# - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
 ##############################################################################
 # TILE_ARRAY RUNS
 # 
 # tile-array init step, fastest version, uses cached synthesis results, takes 5 min
+# Also: uses about 3G
 - label: 'array init 5m'
   agents: { jobsize: "hours" }
   commands:
   - 'mflowgen/test/test_module.sh full_chip tile_array
        --debug
        --use_cached constraints,MemCore,PE,rtl,synthesis,custom-dc-postcompile,tsmc16,synthesis
+       --build_dir /sim/tmp/buildkite-deleteme-array-init-$$BUILDKITE_BUILD_NUMBER
        --steps init'
+  - echo /bin/rm -rf /sim/tmp/buildkite-deleteme-array-init-$$BUILDKITE_BUILD_NUMBER
+  - /bin/rm -rf /sim/tmp/buildkite-deleteme-array-init-$$BUILDKITE_BUILD_NUMBER
+
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
 ########################################################################
