--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -7,13 +7,13 @@ steps:
   agents: { jobsize: "hours" }
   commands:
   - test=mflowgen/test/test_module.sh
-  - $$test full_chip tile_array Tile_MemCore --steps synthesis --debug
+  - $$test full_chip tile_array Tile_MemCore --steps synthesis --debug --need_space 30G
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
 - label: 'PE synth 23m'
   agents: { jobsize: "hours" }
   commands:
-  - test=mflowgen/test/test_module.sh
+  - test=mflowgen/test/test_module.sh --need_space 30G
   - $$test full_chip tile_array Tile_PE --steps synthesis --debug
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
@@ -28,7 +28,7 @@ steps:
   agents: { jobsize: "hours" }
   commands:
   - build_dir=/sim/tmp/deleteme.buildkite-$$BUILDKITE_BUILD_NUMBER.array-init
-  - 'mflowgen/test/test_module.sh full_chip tile_array
+  - 'mflowgen/test/test_module.sh full_chip tile_array --need_space 30G
        --debug
        --use_cached constraints,MemCore,PE,rtl,synthesis,custom-dc-postcompile,tsmc16,synthesis
        --build_dir $$build_dir
