--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -7,14 +7,14 @@ steps:
   agents: { jobsize: "hours" }
   commands:
   - test=mflowgen/test/test_module.sh
-  - $$test full_chip tile_array Tile_MemCore --steps synthesis --debug --need_space 30G
+  - $$test  --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
 - label: 'PE synth 23m'
   agents: { jobsize: "hours" }
   commands:
-  - test=mflowgen/test/test_module.sh --need_space 30G
-  - $$test full_chip tile_array Tile_PE --steps synthesis --debug
+  - test=mflowgen/test/test_module.sh
+  - $$test --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
 ##############################################################################
