--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -1,24 +1,7 @@
 steps:
 
 ##############################################################################
-# INDIVIDUAL TILE RUNS
-# 
-- label: 'MemCore synth 17m'
-  agents: { jobsize: "hours" }
-  commands:
-  - test=mflowgen/test/test_module.sh
-  - $$test  --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
-- wait: { continue_on_failure: true } # One step at a time + continue on failure
-
-- label: 'PE synth 23m'
-  agents: { jobsize: "hours" }
-  commands:
-  - test=mflowgen/test/test_module.sh
-  - $$test --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
-- wait: { continue_on_failure: true } # One step at a time + continue on failure
-
-##############################################################################
-# TILE_ARRAY RUNS
+# TILE_ARRAY RUN
 # 
 # tile-array init step, fastest version, uses cached synthesis results, takes 5 min
 # Also: uses about 3G
@@ -36,6 +19,23 @@ steps:
   - echo /bin/rm -rf $$build_dir
   - /bin/rm -rf $$build_dir
 
+- wait: { continue_on_failure: true } # One step at a time + continue on failure
+
+##############################################################################
+# INDIVIDUAL TILE RUNS
+# 
+- label: 'MemCore synth 17m'
+  agents: { jobsize: "hours" }
+  commands:
+  - test=mflowgen/test/test_module.sh
+  - $$test  --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
+- wait: { continue_on_failure: true } # One step at a time + continue on failure
+
+- label: 'PE synth 23m'
+  agents: { jobsize: "hours" }
+  commands:
+  - test=mflowgen/test/test_module.sh
+  - $$test --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
 ########################################################################
