--- a/mflowgen/glb_top/glb_tile_syn/configure.yml
+++ b/mflowgen/glb_top/glb_tile_syn/configure.yml
@@ -4,7 +4,6 @@ commands:
   - bash get_glb_tile_syn_outputs.sh
 
 outputs:
-  - glb_tile.mapped.v
-  - glb_tile.mapped.spef.gz
-  - glb_tile.mapped.sdc
-  - glb_tile.mapped.sdf
+  - glb_tile.syn.v
+  - glb_tile.syn.sdc
+  - glb_tile.syn.sdf
