get rid of dependence on txt files in xcelium; rename ptpx synth node

--- a/mflowgen/common/synopsys-ptpx-synth/configure.yml
+++ b/mflowgen/common/synopsys-ptpx-synth/configure.yml
@@ -7,7 +7,7 @@
 # Date   : March 3, 2020
 #
 
-name: synopsys-ptpx-dc
+name: synopsys-ptpx-synth
 
 #-------------------------------------------------------------------------
 # Inputs and Outputs
