--- a/mflowgen/common/rtl/configure.yml
+++ b/mflowgen/common/rtl/configure.yml
@@ -13,7 +13,7 @@ parameters:
   interconnect_only: False
   soc_only: False
   PWR_AWARE: True
-  use_container: True
+  use_container: False
   use_local_garnet: True
 
 postconditions:
