--- a/mflowgen/Tile_MemCore/gen_testbench/configure.yml
+++ b/mflowgen/Tile_MemCore/gen_testbench/configure.yml
@@ -15,8 +15,8 @@ name: gen_testbench
 outputs:
   - testbench.sv
   - array_rtl.v
-  - DW_fp_add.v
-  - DW_fp_mult.v
+  - CW_fp_add.v
+  - CW_fp_mult.v
   - design.args
 
 #-------------------------------------------------------------------------
