--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
--e git://github.com/rdaly525/coreir.git@cw-fpmul-verilog-update#egg=coreir
+coreir>=2.0.112  # should be first so we get the latest version
 -e git://github.com/StanfordAHA/gemstone.git#egg=gemstone
 -e git://github.com/StanfordAHA/canal.git#egg=canal
 -e git://github.com/phanrahan/peak.git#egg=peak
