--- a/mflowgen/full_chip/global_controller/configure.yml
+++ b/mflowgen/full_chip/global_controller/configure.yml
@@ -3,6 +3,9 @@ name: global_controller
 commands:
   - bash get_global_controller_outputs.sh
 
+inputs:
+  - design.v
+
 outputs:
   - global_controller_tt.lib
   - global_controller.lef
